Day3/wordpress-mysql-refactored/wordpress-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: wordpress
    weight: 100
